// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TypeScript Writer Generator generates Patient resource in inMemoryOnly mode with snapshot 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { Address } from "../hl7-fhir-r4-core/Address";
import type { Attachment } from "../hl7-fhir-r4-core/Attachment";
import type { BackboneElement } from "../hl7-fhir-r4-core/BackboneElement";
import type { CodeableConcept } from "../hl7-fhir-r4-core/CodeableConcept";
import type { ContactPoint } from "../hl7-fhir-r4-core/ContactPoint";
import type { DomainResource } from "../hl7-fhir-r4-core/DomainResource";
import type { HumanName } from "../hl7-fhir-r4-core/HumanName";
import type { Identifier } from "../hl7-fhir-r4-core/Identifier";
import type { Period } from "../hl7-fhir-r4-core/Period";
import type { Reference } from "../hl7-fhir-r4-core/Reference";

import type { Element } from "../hl7-fhir-r4-core/Element";
export type { Address } from "../hl7-fhir-r4-core/Address";
export type { Attachment } from "../hl7-fhir-r4-core/Attachment";
export type { BackboneElement } from "../hl7-fhir-r4-core/BackboneElement";
export type { CodeableConcept } from "../hl7-fhir-r4-core/CodeableConcept";
export type { ContactPoint } from "../hl7-fhir-r4-core/ContactPoint";
export type { HumanName } from "../hl7-fhir-r4-core/HumanName";
export type { Identifier } from "../hl7-fhir-r4-core/Identifier";
export type { Period } from "../hl7-fhir-r4-core/Period";
export type { Reference } from "../hl7-fhir-r4-core/Reference";

export interface PatientCommunication extends BackboneElement {
    language: CodeableConcept<("ar" | "bn" | "cs" | "da" | "de" | "de-AT" | "de-CH" | "de-DE" | "el" | "en" | "en-AU" | "en-CA" | "en-GB" | "en-IN" | "en-NZ" | "en-SG" | "en-US" | "es" | "es-AR" | "es-ES" | "es-UY" | "fi" | "fr" | "fr-BE" | "fr-CH" | "fr-FR" | "fy" | "fy-NL" | "hi" | "hr" | "it" | "it-CH" | "it-IT" | "ja" | "ko" | "nl" | "nl-BE" | "nl-NL" | "no" | "no-NO" | "pa" | "pl" | "pt" | "pt-BR" | "ru" | "ru-RU" | "sr" | "sr-RS" | "sv" | "sv-SE" | "te" | "zh" | "zh-CN" | "zh-HK" | "zh-SG" | "zh-TW" | string)>;
    preferred?: boolean;
}

export interface PatientContact extends BackboneElement {
    address?: Address;
    gender?: ("male" | "female" | "other" | "unknown");
    name?: HumanName;
    organization?: Reference<"Organization">;
    period?: Period;
    relationship?: CodeableConcept[];
    telecom?: ContactPoint[];
}

export interface PatientLink extends BackboneElement {
    other: Reference<"Patient" | "RelatedPerson">;
    type: ("replaced-by" | "replaces" | "refer" | "seealso");
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/Patient (pkg: hl7.fhir.r4.core#4.0.1)
export interface Patient extends DomainResource {
    resourceType: "Patient";

    active?: boolean;
    _active?: Element;
    address?: Address[];
    birthDate?: string;
    _birthDate?: Element;
    communication?: PatientCommunication[];
    contact?: PatientContact[];
    deceasedBoolean?: boolean;
    _deceasedBoolean?: Element;
    deceasedDateTime?: string;
    _deceasedDateTime?: Element;
    gender?: ("male" | "female" | "other" | "unknown");
    _gender?: Element;
    generalPractitioner?: Reference<"Organization" | "Practitioner" | "PractitionerRole">[];
    identifier?: Identifier[];
    link?: PatientLink[];
    managingOrganization?: Reference<"Organization">;
    maritalStatus?: CodeableConcept<("A" | "D" | "I" | "L" | "M" | "P" | "S" | "T" | "U" | "W" | "UNK" | string)>;
    multipleBirthBoolean?: boolean;
    _multipleBirthBoolean?: Element;
    multipleBirthInteger?: number;
    _multipleBirthInteger?: Element;
    name?: HumanName[];
    photo?: Attachment[];
    telecom?: ContactPoint[];
}
export const isPatient = (resource: unknown): resource is Patient => {
    return resource !== null && typeof resource === "object" && (resource as {resourceType: string}).resourceType === "Patient";
}
"
`;

exports[`TypeScript R4 Example (with generateProfile) file rewrite warnings match expected collisions 1`] = `
[
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_assertedDate.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_author.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_author.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_concept_comments.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_conceptOrder.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_effectiveDate.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Observation_Example_Lipid_Profile.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Observation_Example_Lipid_Profile.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Observation_Example_Lipid_Profile.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_expirationDate.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_expression.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_keyWord.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_label.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_location.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_location.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_map.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_method.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_otherName.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_precondition.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_primaryInd.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_replaces.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_sourceReference.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_statusReason.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_trusted_expansion.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_usage.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_warning.ts'",
  "File will be rewritten 'generated/types/hl7-fhir-r4-core/profiles/Extension_workflowStatus.ts'",
]
`;

exports[`TypeScript R4 Example (with generateProfile) generates bodyweight profile with validate() 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Observation } from "../../hl7-fhir-r4-core/Observation";
import type { Period } from "../../hl7-fhir-r4-core/Period";
import type { Quantity } from "../../hl7-fhir-r4-core/Quantity";
import type { Reference } from "../../hl7-fhir-r4-core/Reference";

export interface observation_bodyweight extends Observation {
    category: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
    subject: Reference<"Patient">;
}

export type Observation_bodyweight_Category_VSCatSliceInput = Omit<CodeableConcept, "coding">;

import { applySliceMatch, matchesSlice, extractSliceSimplified, validateRequired, validateExcluded, validateFixedValue, validateSliceCardinality, validateEnum, validateReference } from "../../profile-helpers";

export type observation_bodyweightProfileParams = {
    status: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown");
    subject: Reference<"Patient">;
    category?: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/bodyweight (pkg: hl7.fhir.r4.core#4.0.1)
export class observation_bodyweightProfile {
    static readonly canonicalUrl = "http://hl7.org/fhir/StructureDefinition/bodyweight"

    private resource: Observation

    constructor (resource: Observation) {
        this.resource = resource
        const r = resource as unknown as Record<string, unknown>
        const meta = (r.meta ??= {}) as Record<string, unknown>
        const profiles = (meta.profile ??= []) as string[]
        if (!profiles.includes("http://hl7.org/fhir/StructureDefinition/bodyweight")) profiles.push("http://hl7.org/fhir/StructureDefinition/bodyweight")
    }

    static from (resource: Observation) : observation_bodyweightProfile {
        return new observation_bodyweightProfile(resource)
    }

    static createResource (args: observation_bodyweightProfileParams) : Observation {
        const categoryDefaults = [{"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}] as unknown[]
        const categoryWithDefaults = [...(args.category ?? [])] as unknown[]
        if (!categoryWithDefaults.some(item => matchesSlice(item, {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>))) categoryWithDefaults.push(categoryDefaults[0]!)
        const resource: Observation = {
            resourceType: "Observation",
            code: {"coding":[{"code":"29463-7","system":"http://loinc.org"}]},
            category: categoryWithDefaults,
            status: args.status,
            subject: args.subject,
            meta: { profile: ["http://hl7.org/fhir/StructureDefinition/bodyweight"] },
        } as unknown as Observation
        return resource
    }

    static create (args: observation_bodyweightProfileParams) : observation_bodyweightProfile {
        return observation_bodyweightProfile.from(observation_bodyweightProfile.createResource(args))
    }

    toResource () : Observation {
        return this.resource
    }

    getStatus () : ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined {
        return this.resource.status as ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined
    }

    setStatus (value: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown")) : this {
        Object.assign(this.resource, { status: value })
        return this
    }

    getSubject () : Reference<"Patient"> | undefined {
        return this.resource.subject as Reference<"Patient"> | undefined
    }

    setSubject (value: Reference<"Patient">) : this {
        Object.assign(this.resource, { subject: value })
        return this
    }

    getCategory () : CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined {
        return this.resource.category as CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined
    }

    setCategory (value: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[]) : this {
        Object.assign(this.resource, { category: value })
        return this
    }

    getCode () : CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined {
        return this.resource.code as CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined
    }

    setCode (value: CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)>) : this {
        Object.assign(this.resource, { code: value })
        return this
    }

    getEffectiveDateTime () : string | undefined {
        return this.resource.effectiveDateTime as string | undefined
    }

    setEffectiveDateTime (value: string) : this {
        Object.assign(this.resource, { effectiveDateTime: value })
        return this
    }

    getEffectivePeriod () : Period | undefined {
        return this.resource.effectivePeriod as Period | undefined
    }

    setEffectivePeriod (value: Period) : this {
        Object.assign(this.resource, { effectivePeriod: value })
        return this
    }

    getValueQuantity () : Quantity | undefined {
        return this.resource.valueQuantity as Quantity | undefined
    }

    setValueQuantity (value: Quantity) : this {
        Object.assign(this.resource, { valueQuantity: value })
        return this
    }

    toProfile () : observation_bodyweight {
        return this.resource as observation_bodyweight
    }

    public setVSCat (input?: Observation_bodyweight_Category_VSCatSliceInput): this {
        const match = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>
        const value = applySliceMatch((input ?? {}) as Record<string, unknown>, match) as unknown as CodeableConcept
        const list = (this.resource.category ??= [])
        const index = list.findIndex((item) => matchesSlice(item, match))
        if (index === -1) {
            list.push(value)
        } else {
            list[index] = value
        }
        return this
    }

    public getVSCat (): Observation_bodyweight_Category_VSCatSliceInput | undefined {
        const match = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>
        const list = this.resource.category
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        if (!item) return undefined
        return extractSliceSimplified(item as unknown as Record<string, unknown>, ["coding"]) as Observation_bodyweight_Category_VSCatSliceInput
    }

    public getVSCatRaw (): CodeableConcept | undefined {
        const match = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>
        const list = this.resource.category
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        return item
    }

    validate () : string[] {
        const errors: string[] = []
        const r = this.resource as unknown as Record<string, unknown>
        { const e = validateRequired(r, "status", "observation-bodyweight"); if (e) errors.push(e) }
        { const e = validateEnum(r["status"], ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"], "status", "observation-bodyweight"); if (e) errors.push(e) }
        { const e = validateRequired(r, "category", "observation-bodyweight"); if (e) errors.push(e) }
        errors.push(...validateSliceCardinality(r["category"] as unknown[] | undefined, {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1, "observation-bodyweight.category"))
        { const e = validateRequired(r, "code", "observation-bodyweight"); if (e) errors.push(e) }
        { const e = validateFixedValue(r, "code", {"coding":[{"code":"29463-7","system":"http://loinc.org"}]}, "observation-bodyweight"); if (e) errors.push(e) }
        { const e = validateRequired(r, "subject", "observation-bodyweight"); if (e) errors.push(e) }
        { const e = validateReference(r["subject"], ["Patient"], "subject", "observation-bodyweight"); if (e) errors.push(e) }
        if (!(r["effectiveDateTime"] !== undefined || r["effectivePeriod"] !== undefined)) {
            errors.push("effective: at least one of effectiveDateTime, effectivePeriod is required")
        }
        { const e = validateReference(r["hasMember"], ["MolecularSequence","QuestionnaireResponse","observation-vitalsigns"], "hasMember", "observation-bodyweight"); if (e) errors.push(e) }
        { const e = validateReference(r["derivedFrom"], ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","observation-vitalsigns"], "derivedFrom", "observation-bodyweight"); if (e) errors.push(e) }
        return errors
    }

}

"
`;

exports[`TypeScript R4 Example (with generateProfile) generates bp profile with validate() 1`] = `
"// WARNING: This file is autogenerated by @atomic-ehr/codegen.
// GitHub: https://github.com/atomic-ehr/codegen
// Any manual changes made to this file may be overwritten.

import type { CodeableConcept } from "../../hl7-fhir-r4-core/CodeableConcept";
import type { Observation } from "../../hl7-fhir-r4-core/Observation";
import type { ObservationComponent } from "../../hl7-fhir-r4-core/Observation";
import type { Period } from "../../hl7-fhir-r4-core/Period";
import type { Quantity } from "../../hl7-fhir-r4-core/Quantity";
import type { Reference } from "../../hl7-fhir-r4-core/Reference";

export interface observation_bp extends Observation {
    category: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
    subject: Reference<"Patient">;
}

export type Observation_bp_Category_VSCatSliceInput = Omit<CodeableConcept, "coding">;
export type Observation_bp_Component_SystolicBPSliceInput = Omit<ObservationComponent, "code">;
export type Observation_bp_Component_DiastolicBPSliceInput = Omit<ObservationComponent, "code">;

import { applySliceMatch, matchesSlice, extractSliceSimplified, validateRequired, validateExcluded, validateFixedValue, validateSliceCardinality, validateEnum, validateReference } from "../../profile-helpers";

export type observation_bpProfileParams = {
    status: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown");
    subject: Reference<"Patient">;
    category?: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[];
    component?: ObservationComponent[];
}

// CanonicalURL: http://hl7.org/fhir/StructureDefinition/bp (pkg: hl7.fhir.r4.core#4.0.1)
export class observation_bpProfile {
    static readonly canonicalUrl = "http://hl7.org/fhir/StructureDefinition/bp"

    private resource: Observation

    constructor (resource: Observation) {
        this.resource = resource
        const r = resource as unknown as Record<string, unknown>
        const meta = (r.meta ??= {}) as Record<string, unknown>
        const profiles = (meta.profile ??= []) as string[]
        if (!profiles.includes("http://hl7.org/fhir/StructureDefinition/bp")) profiles.push("http://hl7.org/fhir/StructureDefinition/bp")
    }

    static from (resource: Observation) : observation_bpProfile {
        return new observation_bpProfile(resource)
    }

    static createResource (args: observation_bpProfileParams) : Observation {
        const categoryDefaults = [{"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}] as unknown[]
        const categoryWithDefaults = [...(args.category ?? [])] as unknown[]
        if (!categoryWithDefaults.some(item => matchesSlice(item, {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>))) categoryWithDefaults.push(categoryDefaults[0]!)
        const componentDefaults = [{"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}},{"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}}] as unknown[]
        const componentWithDefaults = [...(args.component ?? [])] as unknown[]
        if (!componentWithDefaults.some(item => matchesSlice(item, {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}} as Record<string, unknown>))) componentWithDefaults.push(componentDefaults[0]!)
        if (!componentWithDefaults.some(item => matchesSlice(item, {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}} as Record<string, unknown>))) componentWithDefaults.push(componentDefaults[1]!)
        const resource: Observation = {
            resourceType: "Observation",
            code: {"coding":[{"code":"85354-9","system":"http://loinc.org"}]},
            category: categoryWithDefaults,
            component: componentWithDefaults,
            status: args.status,
            subject: args.subject,
            meta: { profile: ["http://hl7.org/fhir/StructureDefinition/bp"] },
        } as unknown as Observation
        return resource
    }

    static create (args: observation_bpProfileParams) : observation_bpProfile {
        return observation_bpProfile.from(observation_bpProfile.createResource(args))
    }

    toResource () : Observation {
        return this.resource
    }

    getStatus () : ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined {
        return this.resource.status as ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown") | undefined
    }

    setStatus (value: ("registered" | "preliminary" | "final" | "amended" | "corrected" | "cancelled" | "entered-in-error" | "unknown")) : this {
        Object.assign(this.resource, { status: value })
        return this
    }

    getSubject () : Reference<"Patient"> | undefined {
        return this.resource.subject as Reference<"Patient"> | undefined
    }

    setSubject (value: Reference<"Patient">) : this {
        Object.assign(this.resource, { subject: value })
        return this
    }

    getCategory () : CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined {
        return this.resource.category as CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[] | undefined
    }

    setCategory (value: CodeableConcept<("social-history" | "vital-signs" | "imaging" | "laboratory" | "procedure" | "survey" | "exam" | "therapy" | "activity" | string)>[]) : this {
        Object.assign(this.resource, { category: value })
        return this
    }

    getCode () : CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined {
        return this.resource.code as CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)> | undefined
    }

    setCode (value: CodeableConcept<("85353-1" | "9279-1" | "8867-4" | "2708-6" | "8310-5" | "8302-2" | "9843-4" | "29463-7" | "39156-5" | "85354-9" | "8480-6" | "8462-4" | "8478-0" | string)>) : this {
        Object.assign(this.resource, { code: value })
        return this
    }

    getComponent () : ObservationComponent[] | undefined {
        return this.resource.component as ObservationComponent[] | undefined
    }

    setComponent (value: ObservationComponent[]) : this {
        Object.assign(this.resource, { component: value })
        return this
    }

    getEffectiveDateTime () : string | undefined {
        return this.resource.effectiveDateTime as string | undefined
    }

    setEffectiveDateTime (value: string) : this {
        Object.assign(this.resource, { effectiveDateTime: value })
        return this
    }

    getEffectivePeriod () : Period | undefined {
        return this.resource.effectivePeriod as Period | undefined
    }

    setEffectivePeriod (value: Period) : this {
        Object.assign(this.resource, { effectivePeriod: value })
        return this
    }

    getValueQuantity () : Quantity | undefined {
        return this.resource.valueQuantity as Quantity | undefined
    }

    setValueQuantity (value: Quantity) : this {
        Object.assign(this.resource, { valueQuantity: value })
        return this
    }

    toProfile () : observation_bp {
        return this.resource as observation_bp
    }

    public setVSCat (input?: Observation_bp_Category_VSCatSliceInput): this {
        const match = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>
        const value = applySliceMatch((input ?? {}) as Record<string, unknown>, match) as unknown as CodeableConcept
        const list = (this.resource.category ??= [])
        const index = list.findIndex((item) => matchesSlice(item, match))
        if (index === -1) {
            list.push(value)
        } else {
            list[index] = value
        }
        return this
    }

    public setSystolicBP (input?: Observation_bp_Component_SystolicBPSliceInput): this {
        const match = {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}} as Record<string, unknown>
        const value = applySliceMatch((input ?? {}) as Record<string, unknown>, match) as unknown as ObservationComponent
        const list = (this.resource.component ??= [])
        const index = list.findIndex((item) => matchesSlice(item, match))
        if (index === -1) {
            list.push(value)
        } else {
            list[index] = value
        }
        return this
    }

    public setDiastolicBP (input?: Observation_bp_Component_DiastolicBPSliceInput): this {
        const match = {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}} as Record<string, unknown>
        const value = applySliceMatch((input ?? {}) as Record<string, unknown>, match) as unknown as ObservationComponent
        const list = (this.resource.component ??= [])
        const index = list.findIndex((item) => matchesSlice(item, match))
        if (index === -1) {
            list.push(value)
        } else {
            list[index] = value
        }
        return this
    }

    public getVSCat (): Observation_bp_Category_VSCatSliceInput | undefined {
        const match = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>
        const list = this.resource.category
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        if (!item) return undefined
        return extractSliceSimplified(item as unknown as Record<string, unknown>, ["coding"]) as Observation_bp_Category_VSCatSliceInput
    }

    public getVSCatRaw (): CodeableConcept | undefined {
        const match = {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}} as Record<string, unknown>
        const list = this.resource.category
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        return item
    }

    public getSystolicBP (): Observation_bp_Component_SystolicBPSliceInput | undefined {
        const match = {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}} as Record<string, unknown>
        const list = this.resource.component
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        if (!item) return undefined
        return extractSliceSimplified(item as unknown as Record<string, unknown>, ["code"]) as Observation_bp_Component_SystolicBPSliceInput
    }

    public getSystolicBPRaw (): ObservationComponent | undefined {
        const match = {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}} as Record<string, unknown>
        const list = this.resource.component
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        return item
    }

    public getDiastolicBP (): Observation_bp_Component_DiastolicBPSliceInput | undefined {
        const match = {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}} as Record<string, unknown>
        const list = this.resource.component
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        if (!item) return undefined
        return extractSliceSimplified(item as unknown as Record<string, unknown>, ["code"]) as Observation_bp_Component_DiastolicBPSliceInput
    }

    public getDiastolicBPRaw (): ObservationComponent | undefined {
        const match = {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}} as Record<string, unknown>
        const list = this.resource.component
        if (!list) return undefined
        const item = list.find((item) => matchesSlice(item, match))
        return item
    }

    validate () : string[] {
        const errors: string[] = []
        const r = this.resource as unknown as Record<string, unknown>
        { const e = validateRequired(r, "status", "observation-bp"); if (e) errors.push(e) }
        { const e = validateEnum(r["status"], ["registered","preliminary","final","amended","corrected","cancelled","entered-in-error","unknown"], "status", "observation-bp"); if (e) errors.push(e) }
        { const e = validateRequired(r, "category", "observation-bp"); if (e) errors.push(e) }
        errors.push(...validateSliceCardinality(r["category"] as unknown[] | undefined, {"coding":{"code":"vital-signs","system":"http://terminology.hl7.org/CodeSystem/observation-category"}}, "VSCat", 1, 1, "observation-bp.category"))
        { const e = validateRequired(r, "code", "observation-bp"); if (e) errors.push(e) }
        { const e = validateFixedValue(r, "code", {"coding":[{"code":"85354-9","system":"http://loinc.org"}]}, "observation-bp"); if (e) errors.push(e) }
        { const e = validateRequired(r, "subject", "observation-bp"); if (e) errors.push(e) }
        { const e = validateReference(r["subject"], ["Patient"], "subject", "observation-bp"); if (e) errors.push(e) }
        if (!(r["effectiveDateTime"] !== undefined || r["effectivePeriod"] !== undefined)) {
            errors.push("effective: at least one of effectiveDateTime, effectivePeriod is required")
        }
        { const e = validateReference(r["hasMember"], ["MolecularSequence","QuestionnaireResponse","observation-vitalsigns"], "hasMember", "observation-bp"); if (e) errors.push(e) }
        { const e = validateReference(r["derivedFrom"], ["DocumentReference","ImagingStudy","Media","MolecularSequence","QuestionnaireResponse","observation-vitalsigns"], "derivedFrom", "observation-bp"); if (e) errors.push(e) }
        errors.push(...validateSliceCardinality(r["component"] as unknown[] | undefined, {"code":{"coding":{"code":"8480-6","system":"http://loinc.org"}}}, "SystolicBP", 1, 1, "observation-bp.component"))
        errors.push(...validateSliceCardinality(r["component"] as unknown[] | undefined, {"code":{"coding":{"code":"8462-4","system":"http://loinc.org"}}}, "DiastolicBP", 1, 1, "observation-bp.component"))
        return errors
    }

}

"
`;
